Added HTML files, converted proj text to links

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
                         <li class= "nav-item">
                             <a class="nav-link" href="#about">ABOUT</a>
                         </li>
-                        <li class= "nav-item">
+
+                        <li class="nav-item">
                             <a class="nav-link" href="#portfolio">PORTFOLIO</a>
                         </li>
+
                         <li class= "nav-item">
-                            <a class="nav-link" href="assets/Resume - Jennifer Pero.odt">RESUME</a>
+                            <a class="nav-link" src="assets/Resume - Jennifer Pero.odt">RESUME</a>
                         </li>
                     </ul>
                 </div>
@@ -62,7 +64,7 @@
                             <div class="d-block">
                                 <div id="hi">Hello, I'm Jenny!</div>
                                 <div id="about-me">I’m a Wichita Student University student majoring in Computer Science, with a certificate in Geographic Information Systems (GIS).
-                                <br><br>There are a few careers that I may consider pursuing, such as data analytics, technical writing, or web development, but right now I'm taking the time to explore all my options.</div>
+                                <br><br>There are a few careers that I may consider pursuing, such as data analytics or technical writing, but right now I'm taking the time to explore all my options.</div>
                             </div>
                         </div>
                     </div>
@@ -74,9 +76,9 @@
                 <div id="port">Portfolio</div>
                 <p>Click on any of the following categories to view some of cool projects!</p>                
                 <div class="projects">
-                    <div id="proj">Data Analytics</div>
-                    <div id="proj">Technical Writing</div>
-                    <div id="proj">Various Programming Projects</div>
+                    <a id="proj" href="DAproj.html">Data Analytics</a>
+                    <a id="proj" href="TWproj.html">Technical Writing</a>
+                    <a id="proj" href="Progproj.html">Other Projects</a>
                 </div>
                 <p>This website is also part of my portfolio, as I made it myself from scratch, hosting it via InfinityFree</p>
             </div>
