More design updates

--- a/index.html
+++ b/index.html
@@ -37,32 +37,29 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="nav navbar-nav">
                         <li class= "nav-item">
-                            <a class="nav-link" href="#about">ABOUT</a>
+                            <a class="nav-link mx-3" href="#hero-home">ABOUT</a>
+                        </li>
+                        <li class= "nav-item">
+                            <a class="nav-link mx-3" href="#skills">SKILLS</a>
                         </li>
                         <li class= "nav-item">
                             <a class="nav-link" href="#experience">EXPERIENCE</a>
                         </li>
-
                         <li class="nav-item">
-                            <a class="nav-link" href="#projects">PROJECTS</a>
-                        </li>
-
-                        <li class= "nav-item">
-                            <a class="nav-link" src="#contact">CONTACT</a>
+                            <a class="nav-link mx-3" href="#projects">PROJECTS</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <div class="container-fluid m-3" id="hero-home">
-            <div class="hero-text" id="student">Student</div>
-            <div class="hero-text" id="programmer">Programmer</div>
-            <div class="hero-text" id="writer">Writer</div>
+        <div class="container-fluid" id="hero-home">
+            <div id="hero-section">
+                <div id="hero-head">Hi, I'm Jenny!</div>
+                <div id="hero-text">I'm a computer science major interested in data analytics, technical writing, and web design.</div>
+            </div>
         </div>
 
-        <div class="container-fluid m-3" id="about">
-        </div>
 
         <!--Footer -->
         <div class="navbar navbar-expand-lg p-3">
@@ -71,70 +68,8 @@
     </body>
 
 </html>
-        <!--
-        <nav class="navbar navbar-expand-sm fixed-top navbar-dark p-1">
-            <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
 
-            <div class="collapse navbar-collapse " id="navbarNav">
-                    <ul class="nav navbar-nav mx-auto">
-                        <li class= "nav-item">
-                            <a class="nav-link" href="#">HOME</a>
-                        </li>
-                        <li class= "nav-item">
-                            <a class="nav-link" href="#about">ABOUT</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="#portfolio">PORTFOLIO</a>
-                        </li>
-
-                        <li class= "nav-item">
-                            <a class="nav-link" src="assets/Resume - Jennifer Pero.odt">RESUME</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-        <section id="home">
-        <div class="container-fluid" id="cont">
-            <div id="name">Jenny Pero</div>
-            <div id="desc">Student | Programmer | Writer</div>
-        </div>
-        </section>
-
-        <section id="about">
-                <div class="container-fluid"> 
-                    <div class="row no-gutters">
-                        <div class="col-md-6 px-0 my-auto">
-                            <img src="assets/pic.jpg" class="mx-auto d-block" id="my-pic">
-                        </div>
-                    
-                        <div class="col-md my-auto">
-                            <div class="d-block">
-                                <div id="hi">Hello, I'm Jenny!</div>
-                                <div id="about-me">I’m a Wichita State University student majoring in Computer Science, with a certificate in Geographic Information Systems (GIS). 
-                                <br><br>There are a few careers that I may consider pursuing, such as data analytics or technical writing, but right now I'm taking the time to explore all my options.</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-        </section>
-
-        <section id="portfolio">
-            <div class="container-fluid">
-                <div id="port">Portfolio</div>
-                <p>I created this website from scratch using HTML and CSS, and am hosting it through InfinityFree. To view some of my other cool projects, click on any following categories below!</p>             
-                <div class="projects">
-                    <a id="proj" href="DAproj.html">Data Analytics</a>
-                    <a id="proj" href="TWproj.html">Technical Writing</a>
-                    <a id="proj" href="Progproj.html">Other Projects</a>
-                </div>
-            </div>
-        </section>
-
+<!--
         <div class="container-fluid connect" style="background-color:#611c31">
             <div class="socials">
                 <a href="https://www.linkedin.com/in/jennifer-pero/" class="fa fa-linkedin"></a>
@@ -142,4 +77,4 @@
                 <a href="mailto:jennycpero@gmail.com#" class="fa fa-envelope"></a>
             </div>
         </div>
-    -->
+-->
