Added buttons, removed about, changed hero section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="nav navbar-nav">
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#hero-home">ABOUT</a>
+                            <a class="nav-link mx-3" href="#hero-home">HOME</a>
                         </li>
                         <li class= "nav-item">
                             <a class="nav-link mx-3" href="#skills">SKILLS</a>
@@ -56,7 +56,11 @@
         <div class="container-fluid" id="hero-home">
             <div id="hero-section">
                 <div id="hero-head">Hi, I'm Jenny!</div>
-                <div id="hero-text">I'm a computer science major interested in data analytics, technical writing, and web design.</div>
+                <p id="hero-text">A computer science student interested in data analytics, technical writing, and web design.</p>
+            </div>
+            <div class="hero-buttons">
+                <button id="resume-btn">Resume</button>
+                <button id="contact-btn">Contact</button>
             </div>
         </div>
 
