--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="nav navbar-nav">
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#hero-home">HOME</a>
+                            <a class="nav-link mx-3" href="#about">ABOUT</a>
                         </li>
                         <li class= "nav-item">
                             <a class="nav-link mx-3" href="#skills">SKILLS</a>
                         </li>
                         <li class= "nav-item">
-                            <a class="nav-link" href="#experience">EXPERIENCE</a>
+                            <a class="nav-link mx-3" href="#projects">PROJECTS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-3" href="#projects">PROJECTS</a>
+                            <a class="nav-link mx-3" href="#contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -56,12 +56,9 @@
         <div class="container-fluid" id="hero-home">
             <div id="hero-section">
                 <div id="hero-head">Hi, I'm Jenny!</div>
-                <p id="hero-text">A computer science student interested in data analytics, technical writing, and web design.</p>
-            </div>
-            <div class="hero-buttons">
+                <p id="hero-text">Aspiring data analyst and technical writer.</p>
                 <button id="resume-btn">Resume</button>
-                <button id="contact-btn">Contact</button>
-            </div>
+            </div>                
         </div>
 
 
