Completed about section, issued font styling changes, added experiences and projects headers but have not finished their sections.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <a class="nav-link mx-3" href="#about">ABOUT</a>
                         </li>
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#skills">SKILLS</a>
+                            <a class="nav-link mx-3" href="#experience">EXPERIENCE</a>
                         </li>
                         <li class= "nav-item">
                             <a class="nav-link mx-3" href="#projects">PROJECTS</a>
@@ -57,14 +57,35 @@
             <div id="hero-section">
                 <div id="hero-head">Hi, I'm Jenny!</div>
                 <p id="hero-text">Aspiring data analyst and technical writer.</p>
-                <button id="resume-btn">Resume</button>
+                <button id="resume-btn">Download Resume</button>
             </div>                
         </div>
 
+        <!--About-->
+        <div class="container-fluid my-3" id="about">
+            <img src="assets/pic.jpg" id="my-pic">
+            <h1 id="about-title" alt="A picture of Jenny Pero">About Me</h1>  
+            <div id="about-desc">
+                <p>I’m a Computer Science student at Wichita State University.  I created this website to both practice my skills and to advertise myself to potential employers and collaborators.</p>  
+                <p>Though currently exploring all of my options, I am particularly drawn to data analytics and technical writing. Technical writing allows me to utilize my passion for writing to produce quality software documentation based on user needs. Data analytics, on the other hand, applies my programming skills in scraping data and crafting beautiful visualizations that help answer intriguing questions.</p>  
+                <p>When not programming or writing, I also enjoy baking, travelling, and singing.</p>  
+            </div>  
+        </div>
+
+        <!--Experience-->
+        <div class="container-fluid my-3" id="experience">
+            <h1 class="exp-proj-title">Experience</h1>
+        </div>
+
+        <!--Projects-->
+        <div class="container-fluid my-3" id="projects">
+            <h1 class="exp-proj-title">Projects</h1>
+        </div>
 
         <!--Footer -->
-        <div class="navbar navbar-expand-lg p-3">
+        <div class="navbar navbar-expand-lg p-3" id="contact">
             <h3>Like what you see? Then connect with me.</h3>
+            <p id="host-credit">This website is hosted by Infinity Free.</p>
         </div>
     </body>
 
