--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.bundle.js"></script>
 
         <!-- fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +27,6 @@
     </head>
 
     <body>
-
         <!--Navigation-->
         <nav class="navbar navbar-expand-md fixed-top navbar-dark px-3">
             <a class="navbar-brand" href="#">Jenny Pero</a>
@@ -62,7 +63,7 @@
         </div>
 
         <!--About-->
-        <div class="container-fluid my-3" id="about">
+        <div class="container-fluid my-4 py-5" id="about">
             <img src="assets/pic.jpg" id="my-pic">
             <h1 id="about-title" alt="A picture of Jenny Pero">About Me</h1>  
             <div id="about-desc">
@@ -73,30 +74,83 @@
         </div>
 
         <!--Experience-->
-        <div class="container-fluid my-3" id="experience">
+        <div class="container-fluid my-4 py-5" id="experience">
             <h1 class="exp-proj-title">Experience</h1>
+            <div id="ennovar-exp">
+                <h2>Student Contractor - Ennovar</h2>
+                <p class="exp-date">August 2021-present</p>
+                <ul>
+                    <li class="position-title">HR Compensation Support - Textron Aviation (March 2022 – present)</li>
+                    <ul>
+                        <li>Assists Textron Aviation’s Compensation Team with various tasks related to job descriptions and salary information.</li>
+                        <li>Cleans and audits salary and employee data in Excel.</li>
+                        <li>Approves Change of Status requests through Outlook.</li>
+                        <li>Conducts salary benchmarking research.</li>
+                    </ul>
+                    <li class="position-title">Level 1 IT Support Technician – Textron Aviation (August 2021 – February 2022)</li>
+                    <ul>
+                        <li>Worked face-to-face with Textron Aviation employees needing IT support. Common issues included resetting passwords, setting up new laptops and phones, re-imaging laptops, and installing or troubleshooting software and hardware.</li>
+                        <li>Documented the resolution process of each interaction via ServiceNow’s ticketing tool. </li>
+                        <li>Improved the visualization and structure of the Help Hangar ticket metrics in Google Sheets.</li>
+                    </ul>
+                </ul>
+            </div>
         </div>
 
         <!--Projects-->
         <div class="container-fluid my-3" id="projects">
             <h1 class="exp-proj-title">Projects</h1>
+            <div class="filter-section">
+                <div class="dropdown">
+                    <button href="#" class="filter-btn dropdown-toggle" data-bs-toggle="dropdown">Category</button>
+                    <div class="dropdown-menu">
+                        <a href="#" class="dropdown-item">Data Analytics</a>
+                        <a href="#" class="dropdown-item">Technical Writing</a>
+                        <a href="#" class="dropdown-item">Other</a>
+                    </div>
+                </div>
+
+                <div class="dropdown">
+                    <button href="#" class="filter-btn dropdown-toggle" data-bs-toggle="dropdown">Languages</button>
+                    <div class="dropdown-menu">
+                        <a href="#" class="dropdown-item">HTML/CSS</a>
+                        <a href="#" class="dropdown-item">Python</a>
+                        <a href="#" class="dropdown-item">JavaScript</a>
+                    </div>
+                </div>
+
+                <div class="dropdown">
+                    <button href="#" class="filter-btn dropdown-toggle" data-bs-toggle="dropdown">Libraries</button>
+                    <div class="dropdown-menu">
+                        <a href="#" class="dropdown-item">BeautifulSoup</a>
+                        <a href="#" class="dropdown-item">Boostrap</a>
+                        <a href="#" class="dropdown-item">Pandas</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="all-projects">
+                <div class="proj">
+                    <img src="assets/webidea1.png" id="test-pic">
+                    <div class="proj-text">
+                        <h2 class="proj-title">Title</h2>
+                        <p>Insert short description about project here</p>
+                        <button>View GitHub Repo</button>
+                        <p>Tagged: Category, Language, Library</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!--Footer -->
         <div class="navbar navbar-expand-lg p-3" id="contact">
             <h3>Like what you see? Then connect with me.</h3>
+            <div class="socials">
+                <a tag="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
+                <a tag="GitHub" href="https://github.com/jennycpero" target="_blank" class="fa fa-github"></a>
+                <a tag="Email" href="mailto:jennycpero@gmail.com#" target="_blank" class="fa fa-envelope"></a>
+            </div>
             <p id="host-credit">This website is hosted by Infinity Free.</p>
         </div>
     </body>
-
 </html>
-
-<!--
-        <div class="container-fluid connect" style="background-color:#611c31">
-            <div class="socials">
-                <a href="https://www.linkedin.com/in/jennifer-pero/" class="fa fa-linkedin"></a>
-                <a href="https://github.com/jennycpero" class="fa fa-github"></a>
-                <a href="mailto:jennycpero@gmail.com#" class="fa fa-envelope"></a>
-            </div>
-        </div>
--->
