Fixed responsive issues with footer

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="proj-text html css other">
                             <h2 class="proj-title">Portfolio Website</h2>
                             <p>Hey, it's my website! A simple static portfolio website.</p>
-                            <button class="repo-btn" onclick="location.href='https://github.com/jennycpero/Portfolio-Website'">View GitHub Repo</button>
+                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Portfolio-Website'">View GitHub Repo</a>
                         </div>
                     </div>
 
@@ -116,7 +116,7 @@
                         <div class="proj-text python other">
                             <h2 class="proj-title">Total</h2>
                             <p>A console-style arithmetic game programmed in Python.</p>
-                            <button class="repo-btn" onclick="location.href='https://github.com/jennycpero/Total'">View GitHub Repo</button>
+                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Total'">View GitHub Repo</a>
                         </div>
                     </div>
 
@@ -125,7 +125,7 @@
                         <div class="proj-text python beautiful-soup pandas da">
                             <h2 class="proj-title">Popeyes Locations Scraper</h2>
                             <p>Web scrapes US Popeyes locations and compiles it into a csv file.</p>
-                            <button class="repo-btn" onclick="location.href='https://github.com/jennycpero/Popeyes-Locations'">View GitHub Repo</button>
+                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Popeyes-Locations'">View GitHub Repo</a>
                         </div>
                     </div>
             </div>
@@ -133,7 +133,7 @@
         </div>
 
         <!--Footer -->
-        <div class="navbar navbar-expand-lg p-3" id="contact">
+        <div class="navbar" id="contact">
             <h3>Like what you see? Then connect with me.</h3>
             <div class="socials">
                 <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
