Rewrote About Me section and project buttons, improved sizing of each section.

--- a/index.html
+++ b/index.html
@@ -68,17 +68,16 @@
             <img src="assets/pic.jpg" id="my-pic">
             <h1 id="about-title" alt="A picture of Jenny Pero">About Me</h1>  
             <div id="about-desc">
-                <p>I’m a Computer Science student at Wichita State University.  I created this website to both practice my skills and to advertise myself to potential employers and collaborators.</p>  
-                <p>Though currently exploring all of my options, I am particularly drawn to data analytics and technical writing. Technical writing allows me to utilize my passion for writing to produce quality software documentation based on user needs. Data analytics, on the other hand, applies my programming skills in scraping data and crafting beautiful visualizations that help answer intriguing questions.</p>  
-                <p>When not programming or writing, I also enjoy baking, travelling, and singing.</p>  
+                <p>I'm a junior computer science student at Wichita State University concentrating on data analytics and technical/UX writing. Both professions allow me to explore my creative side while still applying and maintaining the analytical skills and knowledge that I'm learning in my degree. </p>
+                <p>When not programming or writing, I enjoy singing, baking, and traveling.</p>            
             </div>  
         </div>
 
         <!--Experience-->
-        <div class="container-fluid my-4 p-5" id="experience">
+        <div class="container-fluid my-5 p-5" id="experience">
             <h1 class="exp-proj-title">Experience</h1>
             <div id="ennovar-exp">
-                <h2>Student Contractor - Ennovar</h2>
+                <h2>Student IT Contractor - Ennovar</h2>
                 <p class="exp-date">August 2021-present</p>
                 <ul>
                     <li class="position-title">HR Compensation Support - Textron Aviation (March 2022 – present)</li>
@@ -106,8 +105,8 @@
                         <img src="assets/portfolio-web.png" class="proj-pic">
                         <div class="proj-text html css other">
                             <h2 class="proj-title">Portfolio Website</h2>
-                            <p>Hey, it's my website! A simple static portfolio website.</p>
-                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Portfolio-Website'">View GitHub Repo</a>
+                            <p>Hey, it's my website! A simple static website made from scratch.</p>
+                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Portfolio-Website'">View in GitHub</a>
                         </div>
                     </div>
 
@@ -116,7 +115,7 @@
                         <div class="proj-text python other">
                             <h2 class="proj-title">Total</h2>
                             <p>A console-style arithmetic game programmed in Python.</p>
-                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Total'">View GitHub Repo</a>
+                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Total'">View in GitHub</a>
                         </div>
                     </div>
 
@@ -125,7 +124,7 @@
                         <div class="proj-text python beautiful-soup pandas da">
                             <h2 class="proj-title">Popeyes Locations Scraper</h2>
                             <p>Web scrapes US Popeyes locations and compiles it into a csv file.</p>
-                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Popeyes-Locations'">View GitHub Repo</a>
+                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Popeyes-Locations'">View in GitHub</a>
                         </div>
                     </div>
             </div>
