--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="nav navbar-nav">
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#about">ABOUT</a>
+                            <a class="nav-link mx-3" href="#abt">ABOUT</a>
                         </li>
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#experience">EXPERIENCE</a>
+                            <a class="nav-link mx-3" href="#exp">EXPERIENCE</a>
                         </li>
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#projects">PROJECTS</a>
+                            <a class="nav-link mx-3" href="#pro">PROJECTS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-3" href="#contact">CONTACT</a>
@@ -58,26 +58,30 @@
         <div class="container-fluid" id="hero-home">
             <div id="hero-section">
                 <div id="hero-head">Hi, I'm Jenny!</div>
-                <p id="hero-text">Aspiring data analyst and technical writer.</p>
+                <p id="hero-text">Aspiring technical writer and data analyst.</p>
                 <a id="resume" href="assets/Resume - Jennifer Pero.pdf" download>Download Resume</a>
             </div>                
         </div>
 
+        <span class="anchor" id="abt"></span>
+
         <!--About-->
-        <div class="container-fluid my-4 py-5" id="about">
+        <div class="container-fluid" id="about">
             <img src="assets/pic.jpg" id="my-pic">
             <h1 id="about-title" alt="A picture of Jenny Pero">About Me</h1>  
             <div id="about-desc">
-                <p>I'm a junior computer science student at Wichita State University concentrating on data analytics and technical/UX writing. Both professions allow me to explore my creative side while still applying and maintaining the analytical skills and knowledge that I'm learning in my degree. </p>
+                <p>I'm a junior computer science student at Wichita State University intent on pursuing technical/UX writing or data analytics. Both professions allow me to utilize my creativity and writing skills, while still applying the analytical and computuational knowledge that I'm learning in my degree. </p>
                 <p>When not programming or writing, I enjoy singing, baking, and traveling.</p>            
             </div>  
         </div>
 
+        <span class="anchor" id="exp"></span>
+
         <!--Experience-->
-        <div class="container-fluid my-5 p-5" id="experience">
+        <div class="container-fluid py-2" id="experience">
             <h1 class="exp-proj-title">Experience</h1>
             <div id="ennovar-exp">
-                <h2>Student IT Contractor - Ennovar</h2>
+                <h2 class="exp-title">Student IT Contractor - Ennovar</h2>
                 <p class="exp-date">August 2021-present</p>
                 <ul>
                     <li class="position-title">HR Compensation Support - Textron Aviation (March 2022 – present)</li>
@@ -97,8 +101,10 @@
             </div>
         </div>
 
+        <span class="anchor" id="pro"></span>
+
         <!--Projects-->
-        <div class="container-fluid my-5" id="projects">
+        <div class="container-fluid py-2" id="projects">
             <h1 class="exp-proj-title">Projects</h1>
                <div class="all-projects">
                     <div class="proj">
