Minor touch ups

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <a class="nav-link mx-3" href="#exp">EXPERIENCE</a>
                         </li>
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#pro">PROJECTS</a>
+                            <a class="nav-link mx-3" href="#port">PORTFOLIO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-3" href="#contact">CONTACT</a>
@@ -101,11 +101,11 @@
             </div>
         </div>
 
-        <span class="anchor" id="pro"></span>
+        <span class="anchor" id="port"></span>
 
         <!--Projects-->
         <div class="container-fluid py-2" id="projects">
-            <h1 class="exp-proj-title">Projects</h1>
+            <h1 class="exp-proj-title">Portfolio</h1>
                <div class="all-projects">
                     <div class="proj">
                         <img src="assets/portfolio-web.png" class="proj-pic">
