Edited experience timeline and resume.

--- a/index.html
+++ b/index.html
@@ -84,12 +84,16 @@
                 <h2 class="exp-title">Student IT Contractor - Ennovar</h2>
                 <p class="exp-date">August 2021-present</p>
                 <ul>
-                    <li class="position-title">HR Compensation Support - Textron Aviation (March 2022 – present)</li>
+                    <li class="position-title">Robotics Process Automation Analyst (September 2022 – present)</li>
                     <ul>
-                        <li>Assists Textron Aviation’s Compensation Team with various tasks related to job descriptions and salary information.</li>
-                        <li>Cleans and audits salary and employee data in Excel.</li>
-                        <li>Approves Change of Status requests through Outlook.</li>
-                        <li>Conducts salary benchmarking research.</li>
+                        <li>Developing software bots and conducting data analysis with Ennovar’s new RPA team. </li>
+                    </ul>
+
+                    <li class="position-title">HR Compensation Support - Textron Aviation (March 2022 – August 2022)</li>
+                    <ul>
+                        <li>Cleaned and audited the salary and employee data used by Textron Aviation’s Compensation team. </li>
+                        <li>Approved Change of Status requests through Outlook.</li>
+                        <li>Conducted salary bench marking research.</li>
                     </ul>
                     <li class="position-title">Level 1 IT Support Technician – Textron Aviation (August 2021 – February 2022)</li>
                     <ul>
@@ -106,11 +110,12 @@
         <!--Projects-->
         <div class="container-fluid py-2" id="projects">
             <h1 class="exp-proj-title">Portfolio</h1>
+                <h2>Click the "View in GitHub" button to view the code and/or dashboards for each project.</h2>
                <div class="all-projects">
                     <div class="proj">
                         <img src="assets/portfolio-web.png" class="proj-pic">
-                        <div class="proj-text html css other">
-                            <h2 class="proj-title">Portfolio Website</h2>
+                        <div class="proj-text">
+                            <div class="proj-title">Portfolio Website</div>
                             <p>Hey, it's my website! A simple static website made from scratch.</p>
                             <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Portfolio-Website'">View in GitHub</a>
                         </div>
@@ -118,8 +123,8 @@
 
                     <div class="proj">
                         <img src="assets/total-pic.png" class="proj-pic">
-                        <div class="proj-text python other">
-                            <h2 class="proj-title">Total</h2>
+                        <div class="proj-text">
+                            <div class="proj-title">Total</div>
                             <p>A console-style arithmetic game programmed in Python.</p>
                             <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Total'">View in GitHub</a>
                         </div>
@@ -127,13 +132,13 @@
 
                     <div class="proj">
                         <img src="assets/popeyes-pic.png" class="proj-pic">
-                        <div class="proj-text python beautiful-soup pandas da">
-                            <h2 class="proj-title">Popeyes Locations Scraper</h2>
+                        <div class="proj-text">
+                            <div class="proj-title">Popeyes Locations Scraper</div>
                             <p>Web scrapes US Popeyes locations and compiles it into a csv file.</p>
                             <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Popeyes-Locations'">View in GitHub</a>
                         </div>
                     </div>
-            </div>
+                </div>
 
         </div>
 
